--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
@@ -49,7 +50,7 @@
   },
   "overrides": {
     "nth-check": "^2.0.1",
-    "webpack-dev-server": "^4.15.1",
+    "webpack-dev-server": "^4.15.2",
     "http-proxy-middleware": "^2.0.9",
     "postcss": "^8.4.31",
     "brace-expansion": "^2.0.1",
@@ -57,6 +58,11 @@
     "@babel/helpers": "^7.26.10",
     "@babel/runtime": "^7.26.10",
     "svgo": "^3.0.2",
-    "resolve-url-loader": "^5.0.0"
+    "resolve-url-loader": "^5.0.0",
+    "form-data": "^3.0.4",
+    "glob": "^10.4.6",
+    "node-forge": "^1.3.2",
+    "js-yaml": "^4.1.1",
+    "on-headers": "^1.1.0"
   }
 }
